--- a/Final Question 3/FinalQuestion3.vcxproj
+++ b/Final Question 3/FinalQuestion3.vcxproj
@@ -147,11 +147,12 @@
     <ClCompile Include="bike.c" />
     <ClCompile Include="date.c" />
     <ClCompile Include="file.c" />
-    <ClCompile Include="main.c" />
     <ClCompile Include="participant.c" />
     <ClCompile Include="run.c" />
     <ClCompile Include="string_helper.c" />
     <ClCompile Include="swim.c" />
+    <ClCompile Include="menu.c" />
+    <ClCompile Include="integer_helper.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bike.h" />
@@ -161,6 +162,8 @@
     <ClInclude Include="run.h" />
     <ClInclude Include="string_helper.h" />
     <ClInclude Include="swim.h" />
+    <ClInclude Include="menu.h" />
+    <ClInclude Include="integer_helper.h" />
   </ItemGroup>
   <ItemGroup></ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
